# sparql

./: README.md  sparql.cabal  stack.yaml
src/Language/SPARQL/: Types.hs
